--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProjetJava
+application.vendor=Jack
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,12 +27,16 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/ProjetJava.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.jsch-0.1.20.jar=C:\\Users\\Jack\\Downloads\\jsch-0.1.20.jar
 file.reference.mysql-connector-java-5.0.8-bin.jar=mysql-connector-java-5.0.8\\mysql-connector-java-5.0.8-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.0.8-bin.jar}
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
+    ${file.reference.jsch-0.1.20.jar}:\
+    ${reference.JDBC2014.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +64,9 @@ main.class=GUI.GUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
+project.JDBC2014=../../../Downloads/JDBC2014/JDBC2014
+reference.JDBC2014.jar=${project.JDBC2014}/dist/JDBC2014.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
