--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -64,7 +64,7 @@ main.class=GUI.GUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 project.JDBC2014=../../../Downloads/JDBC2014/JDBC2014
 reference.JDBC2014.jar=${project.JDBC2014}/dist/JDBC2014.jar
 run.classpath=\
